force-app/main/default/objects/ContractPeriod__c/ContractPeriod__c.object-meta.xml
<CustomObject>
    <description>契約の更新単位。月契約は1か月、年契約は1年を表す。</description>
    <label>契約期間</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>契約期間名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>