force-app/main/default/objects/ContractPeriod__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>契約</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>契約期間</relationshipLabel>
    <relationshipName>ContractPeriods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>