force-app/main/default/objects/ContractPeriod__c/fields/FreeeSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>FreeeSyncStatus__c</fullName>
    <label>Freee連携ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未連携</fullName>
                <default>true</default>
                <label>未連携</label>
            </value>
            <value>
                <fullName>連携済</fullName>
            </value>
            <value>
                <fullName>連携エラー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>