force-app/main/default/objects/ContractPeriod__c/fields/InvoiceCreationStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreationStatus__c</fullName>
    <label>請求作成ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未作成</fullName>
                <default>true</default>
                <label>未作成</label>
            </value>
            <value>
                <fullName>作成済</fullName>
            </value>
            <value>
                <fullName>エラー</fullName>
            </value>
            <value>
                <fullName>取消済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>