force-app/main/default/objects/ContractPeriod__c/fields/IsInitialPeriod__c.field-meta.xml
<CustomField>
    <fullName>IsInitialPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>初回期間</label>
    <type>Checkbox</type>
</CustomField>