force-app/main/default/objects/ContractPeriod__c/fields/RelatedInvoice__c.field-meta.xml
<CustomField>
    <fullName>RelatedInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連請求</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>契約期間</relationshipLabel>
    <relationshipName>ContractPeriods</relationshipName>
    <type>Lookup</type>
</CustomField>