force-app/main/default/objects/ContractPeriod__c/fields/RenewalCount__c.field-meta.xml
<CustomField>
    <fullName>RenewalCount__c</fullName>
    <label>更新回数</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>