force-app/main/default/objects/ContractPeriod__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>