force-app/main/default/objects/ContractPeriod__c/listViews/UncreatedInvoicePeriods.listView-meta.xml
<ListView>
    <fullName>UncreatedInvoicePeriods</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>ContractUpdate__c</columns>
    <columns>PeriodStartDate__c</columns>
    <columns>PeriodEndDate__c</columns>
    <columns>InvoiceCreationStatus__c</columns>
    <columns>RelatedInvoice__c</columns>
    <columns>FreeeSyncStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InvoiceCreationStatus__c</field>
        <operation>equals</operation>
        <value>未作成</value>
    </filters>
    <label>請求未作成期間</label>
</ListView>